tests/compile_errors/005-unresolved-placeholders.buzz
import "lib/std";

test "Unknown string interpolated expression" {
    num hello = 12 + world;

    num by = hello + shey;
}

num shey = 42 + joe;